# eeg-age-prediction

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
airflow/dags/: product_groups_dag.py
cli/: commands.py
eeg-age-prediction/cli/: main.py
eeg-age-prediction/src/: evaluate.py
sql/queries/: get_checkout_items.sql  get_items_data.sql
src/eeg_age/: inference.py  preprocess.py
src/product_groups/: __about__.py  __init__.py  config.py  functions.py  io.py  logger.py  models.py  pipeline.py  queries.py  sql.py  utils_new.py
src/product_groups/sql/queries/: client_receipts.sql  get_receipts.sql  get_receipts_with_client_id.sql  get_receipts_with_turnover.sql
tests/: __init__.py
