[tool.poetry]
name = "product-groups"
version = "0.1.0"
description = "Анализ чеков и товарных групп"
authors = ["ilyamikheev <r1sephoenix@yandex.ru>"]
packages = [
    { include = "product_groups", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.2.0"
scikit-learn = "^1.4"
ninja = "^1.11.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
mypy = "^1.0.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"