[tool.poetry]
name = "eeg-age-prediction"
version = "0.1.0"
description = "Age prediction from EEG using sklearn and PyTorch"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"
typer = "^0.12"
scikit-learn = "^1.4"
torch = "^2.2"
mne = "^1.7"

[tool.poetry.scripts]
eeg-cli = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"